@@ -11,7 +11,6 @@ import javax.enterprise.context.ApplicationScoped;
 import javax.inject.Inject;
 import javax.transaction.Transactional;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @ApplicationScoped
@@ -37,14 +36,14 @@ public class CartService {
         return this.cartRepository.findAll()
                 .stream()
                 .map(CartService::mapToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<CartDto> findAllActiveCarts() {
         return this.cartRepository.findByStatus(CartStatus.NEW)
                 .stream()
                 .map(CartService::mapToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Cart create(Long customerId) {
